# soa-mafia

./: Dockerfile  README.md  client.py  messenger.proto  messenger_pb2.py  messenger_pb2_grpc.py  server.py
Mafia/: Dockerfile  Makefile  setup.cfg
Mafia/UNKNOWN.egg-info/: SOURCES.txt  requires.txt
Mafia/src/: client.py  server.py
Mafia/src/mafia_host/: __init__.py  mafia_host.py  mafia_room.py  player.py  room.py  user.py
Mafia/src/service/: Makefile  __init__.py  service_pb2.py  service_pb2_grpc.py
Mafia/src/service/protoc/: service.proto
Voice/: Dockerfile  Makefile_linux  Makefile_mac  setup.cfg
Voice/socket_app/: client.py  server.py
Voice/socket_app/protocol/: __init__.py  protocol.py
