[options]
package_dir=
    =.
packages = find:
install_requires =
    PyAudio
    click
    simple-term-menu
    wheel
    typing

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    socket-voice-chat-client = socket_app.client:main
    socket-voice-chat-server = socket_app.server:main
